# perception_manipulation_protection_image

./: .gitignore  main.asv  main.m  perceptron.asv  perceptron.m  rapport.docx  rapport_TP4.docx  ~$apport.docx  ~WRL3776.tmp
TP4/: TP4.m  TP4.rar  rapport_TP4.docx
perceptron_cpp/: CMakeLists.txt
perceptron_cpp/src/: main.cpp
